--- a/style.css
+++ b/style.css
@@ -11,14 +11,13 @@ body {
     align-items: center; 
     width: 100%; 
     height: 100vh; 
-    background-color: #26c9bb; 
+    background-color: #003041; 
 } 
   
 h1 { 
-    color: rgb(20, 6, 47); 
+    color: rgb(196, 193, 201); 
     text-align: center; 
-} 
-  
+}
 .time {
     display: flex;
     justify-content: center;
